<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/bg_popwindow"
    android:orientation="vertical" android:layout_gravity="center_vertical|center_horizontal">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" >

                <ImageView
                    android:id="@+id/popAbout_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/main_about"
                    android:paddingLeft="5dp"
                    android:paddingRight="7dp"
                    android:src="@drawable/ic_banknote" />

                <TextView
                    android:id="@+id/txtAboutTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/about_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/c_andblue" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="fill_parent"
                android:layout_height="15dip"
                android:contentDescription="@string/main_about"
                android:paddingBottom="2dip"
                android:paddingLeft="2dip"
                android:paddingRight="2dip"
                android:paddingTop="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/bg_popwindow_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:paddingLeft="5dp"
                    android:text="@string/about_ver"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/c_andblue"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/app_ver"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/c_andblue"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/app_builddate"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/c_andblue"
                    android:textSize="15sp" android:paddingLeft="6dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/txtAboutMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/about_body"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/c_andblue"
                android:textSize="15sp" />

            <Button
                android:id="@+id/popAbout_btnDismiss"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginTop="5dip"
                android:background="@drawable/s_btn_common_selector"
                android:padding="2dip"
                android:text="@string/app_common_back"
                android:textColor="@color/c_white"
                android:textSize="17sp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>