
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:paddingTop="2dp" android:paddingLeft="2dp" android:paddingRight="2dp">

        <ImageView
            android:id="@+id/common_searchbar_btnUp"
            android:layout_width="36dp"
            android:layout_height="40dp"
            android:layout_marginLeft="0dp"
            android:background="@drawable/s_btn_common_selector"
            android:clickable="true"
            android:contentDescription="@string/common_search_search"
            android:padding="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_searchbar_up"/>

        <Button
            android:id="@+id/common_searchbar_btnNew"
            android:layout_width="54dp"
            android:layout_height="40dp"
            android:layout_marginLeft="1dp"
            android:background="@drawable/s_btn_common_selector"
            android:text="@string/common_search_new"
            android:textColor="@color/c_white"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/common_searchbar_txtKeyword"
            style="@style/s_common_edittext"
            android:layout_width="0dip"
            android:layout_height="38dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:cursorVisible="true"
            android:ems="7"
            android:fadingEdge="none"
            android:hint="@string/common_search_hint" android:layout_marginLeft="1dp"/>

        <ImageView
            android:id="@+id/common_searchbar_btnSearch"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="1dp"
            android:background="@drawable/s_btn_common_selector"
            android:clickable="true"
            android:contentDescription="@string/common_search_search"
            android:padding="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_topbar_search" />

    </LinearLayout>
