
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_popwindow"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dollar" android:layout_marginLeft="2dp" android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/popDialog_txtMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/main_update_whetherupdate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/c_andblue" android:layout_marginLeft="6dp" android:layout_marginRight="15dp" android:layout_marginTop="2dp" android:layout_marginBottom="2dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <Button
                android:id="@+id/popDialog_btn0"
	            android:layout_width="80dp"
	            android:layout_height="40dp"
                android:background="@drawable/s_btn_common_selector"
                android:padding="8dp"
                android:text="@string/app_common_ok"
                android:textColor="@color/c_white" android:textSize="17sp" android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/popDialog_btn1"
	            android:layout_width="80dp"
	            android:layout_height="40dp"
                android:background="@drawable/s_btn_common_selector"
                android:padding="8dp"
                android:text="@string/app_common_back"
                android:textColor="@color/c_white" android:textSize="17sp" android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>
