<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:background="@drawable/bgc_elist_bg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/all_topbar">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:src="@drawable/ic_catalog_w" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:gravity="center_vertical"
            android:text="@string/main_catalog"
            android:textAppearance="?android:attr/textAppearanceMedium" style="@style/s_topbar_text"/>

        <ImageView
            android:id="@+id/NLCatalogAct_btnSearch"
            style="@style/s_topbar_text"
            android:layout_width="54dp"
            android:layout_height="fill_parent"
            android:background="@drawable/s_btn_topbarbtn_selector"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:paddingBottom="0dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingTop="0dp"
            android:src="@drawable/ic_topbar_search" android:scaleType="centerInside"/>

        <Button
            android:id="@+id/NLCatalogAct_btnBack"
            style="@style/s_topbar_text"
            android:layout_width="54dp"
            android:layout_height="fill_parent"
            android:background="@drawable/s_btn_topbarbtn_selector"
            android:paddingBottom="0dip"
            android:paddingLeft="9dip"
            android:paddingRight="9dip"
            android:paddingTop="0dip"
            android:text="@string/app_common_back" />

    </LinearLayout>

    <include
        android:id="@+id/NLMainAct_incSearchbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/inc_bar_search" />

    <org.fatlyz.notelib.NBExpandableListView
        android:id="@+id/eLstCatalog"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="@color/c_elist_divider"
        android:paddingBottom="0dp"
        android:paddingLeft="8dp"
        android:paddingRight="12dp"
        android:paddingTop="1dp"
        android:fadingEdge="none" 
        android:listSelector="@drawable/s_lst_elist_catalog_child_selector" 
        android:cacheColorHint="#00000000" 
        android:dividerHeight="0.5dp" 
        android:background="@drawable/bg_list_topedge">
    </org.fatlyz.notelib.NBExpandableListView>

</LinearLayout>